# ml-security-rbac-platform

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: security_config.yaml
docker/: Dockerfile  docker-compose.yml
src/: __init__.py
src/api/: __init__.py  server.py
src/api_keys/: __init__.py  manager.py
src/audit/: __init__.py  audit_logger.py
src/auth/: __init__.py  authenticator.py  authorization.py
src/config/: __init__.py  settings.py
src/middleware/: __init__.py  rate_limiter.py
src/models/: __init__.py  resource.py  role.py  user.py
src/storage/: __init__.py  user_store.py
src/utils/: logger.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_api_keys.py  test_audit_logger.py  test_authenticator.py  test_authorization.py  test_models.py  test_rate_limiter.py  test_user_store.py
