[project]
name = "ml-security-rbac-platform"
version = "1.0.0"
description = "Role-Based Access Control (RBAC) Security Platform for Machine Learning Systems"
authors = [
    { name = "Gabriel Demetrios Lafis", email = "gabriel.lafis@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
